Formatting fixes, default html & json formatter

--- a/pages/sample/banner.html
+++ b/pages/sample/banner.html
@@ -41,22 +41,35 @@ permalink: "patterns/banner.html"
 <div class="tabs responsive">
   <ul class="nav-tabs">
     <li>
-      <a href="#section1">Example <span class="sr-only">for full span banner</span></a>
+      <a href="#section1"
+        >Example <span class="sr-only">for full span banner</span></a
+      >
     </li>
     <li>
-      <a href="#section2">Source code <span class="sr-only">for full span banner</span></a>
+      <a href="#section2"
+        >Source code <span class="sr-only">for full span banner</span></a
+      >
     </li>
   </ul>
 
   <!--Examples-->
   <section id="section1" class="tab-pane">
     <div class="card-header" id="heading-example1">
-      <a data-bs-toggle="collapse" href="#collapse-example1" aria-expanded="true" aria-controls="collapse-example1"
-        data-hash="#pane-example1" title="Example tab header">
+      <a
+        data-bs-toggle="collapse"
+        href="#collapse-example1"
+        aria-expanded="true"
+        aria-controls="collapse-example1"
+        data-hash="#pane-example1"
+        title="Example tab header">
         Example
       </a>
     </div>
-    <div id="collapse-example1" class="collapse show p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-example1">
+    <div
+      id="collapse-example1"
+      class="collapse show p-0 m-0 brd-0"
+      role="tabpanel"
+      aria-labelledby="heading-example1">
       <div class="p-a-sm">
         {% include "../../src/_includes/modules/banner.html" %}
         <p class="m-t m-b-0 font-size-16">Minimum width: 1600px</p>
@@ -67,14 +80,25 @@ permalink: "patterns/banner.html"
   <!--HTML-->
   <section id="section1" class="tab-pane">
     <div class="card-header" id="heading-html1">
-      <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html1" aria-expanded="false"
-        aria-controls="collapse-html1" data-hash="#pane-html1" title="HTML Source code tab header">
+      <a
+        class="collapsed"
+        data-bs-toggle="collapse"
+        href="#collapse-html1"
+        aria-expanded="false"
+        aria-controls="collapse-html1"
+        data-hash="#pane-html1"
+        title="HTML Source code tab header">
         Source code
       </a>
     </div>
-    <div id="collapse-html1" class="collapse p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-html1">
+    <div
+      id="collapse-html1"
+      class="collapse p-0 m-0 brd-0"
+      role="tabpanel"
+      aria-labelledby="heading-html1">
       <div class="p-a-sm">
-        <pre style="max-height: 300px;"><code>{% include "../../src/_includes/modules/banner.html" %}</code>
+        <pre
+          style="max-height: 300px;"><code>{% include "../../src/_includes/modules/banner.html" %}</code>
     </pre>
       </div>
     </div>
@@ -99,22 +123,35 @@ permalink: "patterns/banner.html"
 <div class="tabs responsive">
   <ul class="nav-tabs">
     <li>
-      <a href="#section3">Example <span class="sr-only">for feature banner</span></a>
+      <a href="#section3"
+        >Example <span class="sr-only">for feature banner</span></a
+      >
     </li>
     <li>
-      <a href="#section4">Source code <span class="sr-only">for feature banner</span></a>
+      <a href="#section4"
+        >Source code <span class="sr-only">for feature banner</span></a
+      >
     </li>
   </ul>
 
   <!--Examples-->
   <section id="section3" class="tab-pane">
     <div class="card-header" id="heading-example3">
-      <a data-bs-toggle="collapse" href="#collapse-example3" aria-expanded="true" aria-controls="collapse-example3"
-        data-hash="#pane-example3" title="Example tab header">
+      <a
+        data-bs-toggle="collapse"
+        href="#collapse-example3"
+        aria-expanded="true"
+        aria-controls="collapse-example3"
+        data-hash="#pane-example3"
+        title="Example tab header">
         Example
       </a>
     </div>
-    <div id="collapse-example3" class="collapse show p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-example3">
+    <div
+      id="collapse-example3"
+      class="collapse show p-0 m-0 brd-0"
+      role="tabpanel"
+      aria-labelledby="heading-example3">
       <div class="p-a-sm p-b">
         {% include "../../src/_includes/modules/feature-card.html" %}
         <p class="m-t m-b-0 font-size-16">Maximum width: 1176px</p>
@@ -125,14 +162,25 @@ permalink: "patterns/banner.html"
   <!--HTML-->
   <section id="section4" class="tab-pane">
     <div class="card-header" id="heading-html3">
-      <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html3" aria-expanded="false"
-        aria-controls="collapse-html3" data-hash="#pane-html3" title="HTML Source code tab header">
+      <a
+        class="collapsed"
+        data-bs-toggle="collapse"
+        href="#collapse-html3"
+        aria-expanded="false"
+        aria-controls="collapse-html3"
+        data-hash="#pane-html3"
+        title="HTML Source code tab header">
         Source code
       </a>
     </div>
-    <div id="collapse-html3" class="collapse p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-html3">
+    <div
+      id="collapse-html3"
+      class="collapse p-0 m-0 brd-0"
+      role="tabpanel"
+      aria-labelledby="heading-html3">
       <div class="p-a-sm">
-        <pre style="max-height: 300px;"><code>{% include "../../src/_includes/modules/feature-card.html" %}</code>
+        <pre
+          style="max-height: 300px;"><code>{% include "../../src/_includes/modules/feature-card.html" %}</code>
    </pre>
       </div>
     </div>
