--- a/pages/sample/card-grid.html
+++ b/pages/sample/card-grid.html
@@ -27,22 +27,35 @@ permalink: "patterns/card-grid.html"
 <div class="tabs responsive">
   <ul class="nav-tabs">
     <li>
-      <a href="#section1">Example <span class="sr-only">for basic card grid</span></a>
+      <a href="#section1"
+        >Example <span class="sr-only">for basic card grid</span></a
+      >
     </li>
     <li>
-      <a href="#section2">Source code <span class="sr-only">for basic card grid</span></a>
+      <a href="#section2"
+        >Source code <span class="sr-only">for basic card grid</span></a
+      >
     </li>
   </ul>
 
   <!--Examples-->
   <section id="section1" class="tab-pane">
     <div class="card-header" id="heading-example1">
-      <a data-bs-toggle="collapse" href="#collapse-example1" aria-expanded="true" aria-controls="collapse-example1"
-        data-hash="#pane-example1" title="Example tab header">
+      <a
+        data-bs-toggle="collapse"
+        href="#collapse-example1"
+        aria-expanded="true"
+        aria-controls="collapse-example1"
+        data-hash="#pane-example1"
+        title="Example tab header">
         Example
       </a>
     </div>
-    <div id="collapse-example1" class="collapse show p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-example1">
+    <div
+      id="collapse-example1"
+      class="collapse show p-0 m-0 brd-0"
+      role="tabpanel"
+      aria-labelledby="heading-example1">
       <div class="p-a-sm">
         {% include "../../src/_includes/modules/card-grid-basic.html" %}
       </div>
@@ -52,14 +65,25 @@ permalink: "patterns/card-grid.html"
   <!--HTML-->
   <section id="section2" class="tab-pane">
     <div class="card-header" id="heading-html1">
-      <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html1" aria-expanded="false"
-        aria-controls="collapse-html1" data-hash="#pane-html1" title="HTML Source code tab header">
+      <a
+        class="collapsed"
+        data-bs-toggle="collapse"
+        href="#collapse-html1"
+        aria-expanded="false"
+        aria-controls="collapse-html1"
+        data-hash="#pane-html1"
+        title="HTML Source code tab header">
         Source code
       </a>
     </div>
-    <div id="collapse-html1" class="collapse p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-html1">
+    <div
+      id="collapse-html1"
+      class="collapse p-0 m-0 brd-0"
+      role="tabpanel"
+      aria-labelledby="heading-html1">
       <div class="p-a-sm">
-        <pre style="max-height: 300px;"><code>{% include "../../src/_includes/modules/card-grid-basic.html" %}</code>
+        <pre
+          style="max-height: 300px;"><code>{% include "../../src/_includes/modules/card-grid-basic.html" %}</code>
     </pre>
       </div>
     </div>
@@ -79,22 +103,35 @@ permalink: "patterns/card-grid.html"
 <div class="tabs responsive">
   <ul class="nav-tabs">
     <li>
-      <a href="#section3">Example <span class="sr-only">for news card grid</span></a>
+      <a href="#section3"
+        >Example <span class="sr-only">for news card grid</span></a
+      >
     </li>
     <li>
-      <a href="#section4">Source code <span class="sr-only">for news card grid</span></a>
+      <a href="#section4"
+        >Source code <span class="sr-only">for news card grid</span></a
+      >
     </li>
   </ul>
 
   <!--Examples-->
   <section id="section3" class="tab-pane">
     <div class="card-header" id="heading-example4">
-      <a data-bs-toggle="collapse" href="#collapse-example4" aria-expanded="true" aria-controls="collapse-example4"
-        data-hash="#pane-example4" title="Example tab header">
+      <a
+        data-bs-toggle="collapse"
+        href="#collapse-example4"
+        aria-expanded="true"
+        aria-controls="collapse-example4"
+        data-hash="#pane-example4"
+        title="Example tab header">
         Example
       </a>
     </div>
-    <div id="collapse-example4" class="collapse show p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-example4">
+    <div
+      id="collapse-example4"
+      class="collapse show p-0 m-0 brd-0"
+      role="tabpanel"
+      aria-labelledby="heading-example4">
       <div class="p-a-sm p-b">
         {% include "../../src/_includes/modules/news-block.html" %}
       </div>
@@ -104,14 +141,25 @@ permalink: "patterns/card-grid.html"
   <!--HTML-->
   <section id="section4" class="tab-pane">
     <div class="card-header" id="heading-html4">
-      <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html4" aria-expanded="false"
-        aria-controls="collapse-html4" data-hash="#pane-html4" title="HTML Source code tab header">
+      <a
+        class="collapsed"
+        data-bs-toggle="collapse"
+        href="#collapse-html4"
+        aria-expanded="false"
+        aria-controls="collapse-html4"
+        data-hash="#pane-html4"
+        title="HTML Source code tab header">
         Source code
       </a>
     </div>
-    <div id="collapse-html4" class="collapse p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-html4">
+    <div
+      id="collapse-html4"
+      class="collapse p-0 m-0 brd-0"
+      role="tabpanel"
+      aria-labelledby="heading-html4">
       <div class="p-a-sm">
-        <pre style="max-height: 300px;"><code>{% include "../../src/_includes/modules/news-block.html" %}</code>
+        <pre
+          style="max-height: 300px;"><code>{% include "../../src/_includes/modules/news-block.html" %}</code>
    </pre>
       </div>
     </div>
@@ -128,22 +176,35 @@ permalink: "patterns/card-grid.html"
 <div class="tabs responsive">
   <ul class="nav-tabs">
     <li>
-      <a href="#section5">Example <span class="sr-only">for imagery card grid</span></a>
+      <a href="#section5"
+        >Example <span class="sr-only">for imagery card grid</span></a
+      >
     </li>
     <li>
-      <a href="#section6">Source code <span class="sr-only">for imagery card grid</span></a>
+      <a href="#section6"
+        >Source code <span class="sr-only">for imagery card grid</span></a
+      >
     </li>
   </ul>
 
   <!--Examples-->
   <section id="section5" class="tab-pane">
     <div class="card-header" id="heading-example2">
-      <a data-bs-toggle="collapse" href="#collapse-example2" aria-expanded="true" aria-controls="collapse-example2"
-        data-hash="#pane-example2" title="Example tab header">
+      <a
+        data-bs-toggle="collapse"
+        href="#collapse-example2"
+        aria-expanded="true"
+        aria-controls="collapse-example2"
+        data-hash="#pane-example2"
+        title="Example tab header">
         Example
       </a>
     </div>
-    <div id="collapse-example2" class="collapse show p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-example2">
+    <div
+      id="collapse-example2"
+      class="collapse show p-0 m-0 brd-0"
+      role="tabpanel"
+      aria-labelledby="heading-example2">
       <div class="p-a-sm p-b-lg">
         <h3 class="m-t-0">Graphics</h3>
         {% include "../../src/_includes/modules/card-grid-icons.html" %}
@@ -157,12 +218,22 @@ permalink: "patterns/card-grid.html"
   <!--HTML-->
   <section id="section6" class="tab-pane">
     <div class="card-header" id="heading-html2">
-      <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html2" aria-expanded="false"
-        aria-controls="collapse-html2" data-hash="#pane-html2" title="HTML Source code tab header">
+      <a
+        class="collapsed"
+        data-bs-toggle="collapse"
+        href="#collapse-html2"
+        aria-expanded="false"
+        aria-controls="collapse-html2"
+        data-hash="#pane-html2"
+        title="HTML Source code tab header">
         Source code
       </a>
     </div>
-    <div id="collapse-html2" class="collapse p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-html2">
+    <div
+      id="collapse-html2"
+      class="collapse p-0 m-0 brd-0"
+      role="tabpanel"
+      aria-labelledby="heading-html2">
       <div class="p-a-sm">
         <pre style="max-height: 300px;"><code><h3 class="m-t-0">Graphics</h3>
 {% include "../../src/_includes/modules/card-grid-icons.html" %}
