--- a/pages/sample/lists.html
+++ b/pages/sample/lists.html
@@ -44,22 +44,36 @@ permalink: "components/lists.html"
 <div class="tabs responsive">
   <ul class="nav-tabs">
     <li>
-      <a href="#section1">Example <span class="sr-only">for unordered list</span></a>
+      <a href="#section1"
+        >Example <span class="sr-only">for unordered list</span></a
+      >
     </li>
     <li>
-      <a href="#section2">Source code <span class="sr-only">for unordered list</span></a>
+      <a href="#section2"
+        >Source code <span class="sr-only">for unordered list</span></a
+      >
     </li>
   </ul>
 
   <!--Examples-->
   <section id="section1" class="tab-pane">
     <div class="card-header" id="heading-example1">
-      <a data-bs-toggle="collapse" href="#collapse-example1" data-parent="#tab-content" aria-expanded="true"
-        aria-controls="collapse-example1" data-hash="#pane-example1" title="Example tab header">
+      <a
+        data-bs-toggle="collapse"
+        href="#collapse-example1"
+        data-parent="#tab-content"
+        aria-expanded="true"
+        aria-controls="collapse-example1"
+        data-hash="#pane-example1"
+        title="Example tab header">
         Example
       </a>
     </div>
-    <div id="collapse-example1" class="collapse show" role="tabpanel" aria-labelledby="heading-example1">
+    <div
+      id="collapse-example1"
+      class="collapse show"
+      role="tabpanel"
+      aria-labelledby="heading-example1">
       <div class="card-body p-t-md p-b-sm p-x-md">
         {% include "../../src/_includes/modules/list-unordered.html" %}
       </div>
@@ -69,15 +83,26 @@ permalink: "components/lists.html"
   <!--HTML-->
   <section id="section2" class="tab-pane">
     <div class="card-header" id="heading-html1">
-      <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html1" data-parent="#tab-content"
-        aria-expanded="false" aria-controls="collapse-html1" data-hash="#pane-html1"
+      <a
+        class="collapsed"
+        data-bs-toggle="collapse"
+        href="#collapse-html1"
+        data-parent="#tab-content"
+        aria-expanded="false"
+        aria-controls="collapse-html1"
+        data-hash="#pane-html1"
         title="HTML Source code tab header">
         Source code
       </a>
     </div>
-    <div id="collapse-html1" class="collapse" role="tabpanel" aria-labelledby="heading-html1">
+    <div
+      id="collapse-html1"
+      class="collapse"
+      role="tabpanel"
+      aria-labelledby="heading-html1">
       <div class="card-body">
-        <pre style="max-height: 300px;"><code>{% include "../../src/_includes/modules/list-unordered.html" %}</code>
+        <pre
+          style="max-height: 300px;"><code>{% include "../../src/_includes/modules/list-unordered.html" %}</code>
     </pre>
       </div>
     </div>
@@ -103,22 +128,36 @@ permalink: "components/lists.html"
 <div class="tabs responsive">
   <ul class="nav-tabs">
     <li>
-      <a href="#section3">Example <span class="sr-only">for ordered list</span></a>
+      <a href="#section3"
+        >Example <span class="sr-only">for ordered list</span></a
+      >
     </li>
     <li>
-      <a href="#section4">Source code <span class="sr-only">for ordered list</span></a>
+      <a href="#section4"
+        >Source code <span class="sr-only">for ordered list</span></a
+      >
     </li>
   </ul>
 
   <!--Examples-->
   <section id="section3" class="tab-pane">
     <div class="card-header" id="heading-example3">
-      <a data-bs-toggle="collapse" href="#collapse-example3" data-parent="#tab-content2" aria-expanded="true"
-        aria-controls="collapse-example3" data-hash="#pane-example3" title="Example tab header">
+      <a
+        data-bs-toggle="collapse"
+        href="#collapse-example3"
+        data-parent="#tab-content2"
+        aria-expanded="true"
+        aria-controls="collapse-example3"
+        data-hash="#pane-example3"
+        title="Example tab header">
         Example
       </a>
     </div>
-    <div id="collapse-example3" class="collapse show" role="tabpanel" aria-labelledby="heading-example3">
+    <div
+      id="collapse-example3"
+      class="collapse show"
+      role="tabpanel"
+      aria-labelledby="heading-example3">
       <div class="card-body p-t-md p-b-sm p-x-md">
         {% include "../../src/_includes/modules/list-ordered.html" %}
       </div>
@@ -128,15 +167,26 @@ permalink: "components/lists.html"
   <!--HTML-->
   <section id="section4" class="tab-pane">
     <div class="card-header" id="heading-html3">
-      <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html3" data-parent="#tab-content2"
-        aria-expanded="false" aria-controls="collapse-html3" data-hash="#pane-html3"
+      <a
+        class="collapsed"
+        data-bs-toggle="collapse"
+        href="#collapse-html3"
+        data-parent="#tab-content2"
+        aria-expanded="false"
+        aria-controls="collapse-html3"
+        data-hash="#pane-html3"
         title="HTML Source code tab header">
         Source code
       </a>
     </div>
-    <div id="collapse-html3" class="collapse" role="tabpanel" aria-labelledby="heading-html3">
+    <div
+      id="collapse-html3"
+      class="collapse"
+      role="tabpanel"
+      aria-labelledby="heading-html3">
       <div class="card-body">
-        <pre style="max-height: 300px;"><code>{% include "../../src/_includes/modules/list-ordered.html" %}</code>
+        <pre
+          style="max-height: 300px;"><code>{% include "../../src/_includes/modules/list-ordered.html" %}</code>
    </pre>
       </div>
     </div>
