--- a/pages/sample/table.html
+++ b/pages/sample/table.html
@@ -16,22 +16,35 @@ permalink: "components/table.html"
 <div class="tabs responsive">
   <ul class="nav-tabs">
     <li>
-      <a href="#section1">Example <span class="sr-only">for basic table</span></a>
+      <a href="#section1"
+        >Example <span class="sr-only">for basic table</span></a
+      >
     </li>
     <li>
-      <a href="#section2">Source code <span class="sr-only">for basic table</span></a>
+      <a href="#section2"
+        >Source code <span class="sr-only">for basic table</span></a
+      >
     </li>
   </ul>
 
   <!--Examples-->
   <section id="section1" class="tab-pane">
     <div class="card-header" id="heading-example1">
-      <a data-bs-toggle="collapse" href="#collapse-example1" aria-expanded="true" aria-controls="collapse-example1"
-        data-hash="#pane-example1" title="Example tab header">
+      <a
+        data-bs-toggle="collapse"
+        href="#collapse-example1"
+        aria-expanded="true"
+        aria-controls="collapse-example1"
+        data-hash="#pane-example1"
+        title="Example tab header">
         Example
       </a>
     </div>
-    <div id="collapse-example1" class="collapse show p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-example1">
+    <div
+      id="collapse-example1"
+      class="collapse show p-0 m-0 brd-0"
+      role="tabpanel"
+      aria-labelledby="heading-example1">
       <div class="p-a-sm">
         {% include "../../src/_includes/modules/table.html" %}
       </div>
@@ -40,12 +53,22 @@ permalink: "components/table.html"
   <!--HTML-->
   <section id="section2" class="tab-pane">
     <div class="card-header" id="heading-html1">
-      <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html1" aria-expanded="false"
-        aria-controls="collapse-html1" data-hash="#pane-html1" title="HTML Source code tab header">
+      <a
+        class="collapsed"
+        data-bs-toggle="collapse"
+        href="#collapse-html1"
+        aria-expanded="false"
+        aria-controls="collapse-html1"
+        data-hash="#pane-html1"
+        title="HTML Source code tab header">
         Source code
       </a>
     </div>
-    <div id="collapse-html1" class="collapse p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-html1">
+    <div
+      id="collapse-html1"
+      class="collapse p-0 m-0 brd-0"
+      role="tabpanel"
+      aria-labelledby="heading-html1">
       <div class="p-a-sm">
         <pre style="max-height: 300px;">
 <code>{% include "../../src/_includes/modules/table.html" %}</code>
@@ -61,22 +84,35 @@ permalink: "components/table.html"
 <div class="tabs responsive">
   <ul class="nav-tabs">
     <li>
-      <a href="#section3">Example <span class="sr-only">for shaded table</span></a>
+      <a href="#section3"
+        >Example <span class="sr-only">for shaded table</span></a
+      >
     </li>
     <li>
-      <a href="#section4">Source code <span class="sr-only">for shaded table</span></a>
+      <a href="#section4"
+        >Source code <span class="sr-only">for shaded table</span></a
+      >
     </li>
   </ul>
 
   <!--Examples-->
   <section id="section3" class="tab-pane">
     <div class="card-header" id="heading-example2">
-      <a data-bs-toggle="collapse" href="#collapse-example2" aria-expanded="true" aria-controls="collapse-example2"
-        data-hash="#pane-example2" title="Example tab header">
+      <a
+        data-bs-toggle="collapse"
+        href="#collapse-example2"
+        aria-expanded="true"
+        aria-controls="collapse-example2"
+        data-hash="#pane-example2"
+        title="Example tab header">
         Example
       </a>
     </div>
-    <div id="collapse-example2" class="collapse show p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-example2">
+    <div
+      id="collapse-example2"
+      class="collapse show p-0 m-0 brd-0"
+      role="tabpanel"
+      aria-labelledby="heading-example2">
       <div class="p-a-sm">
         {% include "../../src/_includes/modules/table-default.html" %}
       </div>
@@ -85,12 +121,22 @@ permalink: "components/table.html"
   <!--HTML-->
   <section id="section4" class="tab-pane">
     <div class="card-header" id="heading-html2">
-      <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html2" aria-expanded="false"
-        aria-controls="collapse-html2" data-hash="#pane-html2" title="HTML Source code tab header">
+      <a
+        class="collapsed"
+        data-bs-toggle="collapse"
+        href="#collapse-html2"
+        aria-expanded="false"
+        aria-controls="collapse-html2"
+        data-hash="#pane-html2"
+        title="HTML Source code tab header">
         Source code
       </a>
     </div>
-    <div id="collapse-html2" class="collapse p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-html2">
+    <div
+      id="collapse-html2"
+      class="collapse p-0 m-0 brd-0"
+      role="tabpanel"
+      aria-labelledby="heading-html2">
       <div class="p-a-sm">
         <pre style="max-height: 300px;">
 <code>{% include "../../src/_includes/modules/table-default.html" %}</code>
@@ -106,22 +152,35 @@ permalink: "components/table.html"
 <div class="tabs responsive">
   <ul class="nav-tabs">
     <li>
-      <a href="#section5">Example <span class="sr-only">for zebra table</span></a>
+      <a href="#section5"
+        >Example <span class="sr-only">for zebra table</span></a
+      >
     </li>
     <li>
-      <a href="#section6">Source code <span class="sr-only">for zebra table</span></a>
+      <a href="#section6"
+        >Source code <span class="sr-only">for zebra table</span></a
+      >
     </li>
   </ul>
 
   <!--Examples-->
   <section id="section5" class="tab-pane">
     <div class="card-header" id="heading-example3">
-      <a data-bs-toggle="collapse" href="#collapse-example3" aria-expanded="true" aria-controls="collapse-example3"
-        data-hash="#pane-example3" title="Example tab header">
+      <a
+        data-bs-toggle="collapse"
+        href="#collapse-example3"
+        aria-expanded="true"
+        aria-controls="collapse-example3"
+        data-hash="#pane-example3"
+        title="Example tab header">
         Example
       </a>
     </div>
-    <div id="collapse-example3" class="collapse show p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-example3">
+    <div
+      id="collapse-example3"
+      class="collapse show p-0 m-0 brd-0"
+      role="tabpanel"
+      aria-labelledby="heading-example3">
       <div class="p-a-sm">
         {% include "../../src/_includes/modules/table-striped.html" %}
       </div>
@@ -130,12 +189,22 @@ permalink: "components/table.html"
   <!--HTML-->
   <section id="section6" class="tab-pane">
     <div class="card-header" id="heading-html3">
-      <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html3" aria-expanded="false"
-        aria-controls="collapse-html3" data-hash="#pane-html3" title="HTML Source code tab header">
+      <a
+        class="collapsed"
+        data-bs-toggle="collapse"
+        href="#collapse-html3"
+        aria-expanded="false"
+        aria-controls="collapse-html3"
+        data-hash="#pane-html3"
+        title="HTML Source code tab header">
         Source code
       </a>
     </div>
-    <div id="collapse-html3" class="collapse p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-html3">
+    <div
+      id="collapse-html3"
+      class="collapse p-0 m-0 brd-0"
+      role="tabpanel"
+      aria-labelledby="heading-html3">
       <div class="p-a-sm">
         <pre style="max-height: 300px;">
 <code>{% include "../../src/_includes/modules/table-striped.html" %}</code>
