--- a/pages/sample/executive-profile.html
+++ b/pages/sample/executive-profile.html
@@ -31,22 +31,36 @@ permalink: "components/executive-profile.html"
 <div class="tabs responsive">
   <ul class="nav-tabs">
     <li>
-      <a href="#section1">Example <span class="sr-only">for default executive profile</span></a>
+      <a href="#section1"
+        >Example <span class="sr-only">for default executive profile</span></a
+      >
     </li>
     <li>
-      <a href="#section2">Source code <span class="sr-only">for default executive profile</span></a>
+      <a href="#section2"
+        >Source code
+        <span class="sr-only">for default executive profile</span></a
+      >
     </li>
   </ul>
 
   <!--Examples-->
   <section id="section1" class="tab-pane">
     <div class="card-header" id="heading-example1">
-      <a data-bs-toggle="collapse" href="#collapse-example1" aria-expanded="true" aria-controls="collapse-example1"
-        data-hash="#pane-example1" title="Example tab header">
+      <a
+        data-bs-toggle="collapse"
+        href="#collapse-example1"
+        aria-expanded="true"
+        aria-controls="collapse-example1"
+        data-hash="#pane-example1"
+        title="Example tab header">
         Example
       </a>
     </div>
-    <div id="collapse-example1" class="collapse show p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-example1">
+    <div
+      id="collapse-example1"
+      class="collapse show p-0 m-0 brd-0"
+      role="tabpanel"
+      aria-labelledby="heading-example1">
       <div class="row">
         <div class="col-md-6">
           <div class="p-a-sm p-y-0">
@@ -60,12 +74,22 @@ permalink: "components/executive-profile.html"
   <!--HTML-->
   <section id="section2" class="tab-pane">
     <div class="card-header" id="heading-html1">
-      <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html1" aria-expanded="false"
-        aria-controls="collapse-html1" data-hash="#pane-html1" title="HTML Source code tab header">
+      <a
+        class="collapsed"
+        data-bs-toggle="collapse"
+        href="#collapse-html1"
+        aria-expanded="false"
+        aria-controls="collapse-html1"
+        data-hash="#pane-html1"
+        title="HTML Source code tab header">
         Source code
       </a>
     </div>
-    <div id="collapse-html1" class="collapse p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-html1">
+    <div
+      id="collapse-html1"
+      class="collapse p-0 m-0 brd-0"
+      role="tabpanel"
+      aria-labelledby="heading-html1">
       <div class="p-a-sm">
         <pre
           style="max-height: 300px;"><code>{% include "../../src/_includes/modules/executive-profile.html" %}</code></pre>
@@ -86,24 +110,43 @@ permalink: "components/executive-profile.html"
 <div class="tabs responsive">
   <ul class="nav-tabs">
     <li>
-      <a href="#section3">Example <span class="sr-only">for a transparent executive profile to use on a light
-          background</span></a>
+      <a href="#section3"
+        >Example
+        <span class="sr-only"
+          >for a transparent executive profile to use on a light
+          background</span
+        ></a
+      >
     </li>
     <li>
-      <a href="#section4">Source code <span class="sr-only">for a transparent executive profile to use on a light
-          background</span></a>
+      <a href="#section4"
+        >Source code
+        <span class="sr-only"
+          >for a transparent executive profile to use on a light
+          background</span
+        ></a
+      >
     </li>
   </ul>
 
   <!--Examples-->
   <section id="section3" class="tab-pane">
     <div class="card-header" id="heading-example3">
-      <a data-bs-toggle="collapse" href="#collapse-example3" aria-expanded="true" aria-controls="collapse-example3"
-        data-hash="#pane-example3" title="Example tab header">
+      <a
+        data-bs-toggle="collapse"
+        href="#collapse-example3"
+        aria-expanded="true"
+        aria-controls="collapse-example3"
+        data-hash="#pane-example3"
+        title="Example tab header">
         Example
       </a>
     </div>
-    <div id="collapse-example3" class="collapse show p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-example3">
+    <div
+      id="collapse-example3"
+      class="collapse show p-0 m-0 brd-0"
+      role="tabpanel"
+      aria-labelledby="heading-example3">
       <div class="p-a-sm p-y-0">
         {% include
         "../../src/_includes/modules/executive-profile-transparent.html" %}
@@ -114,12 +157,22 @@ permalink: "components/executive-profile.html"
   <!--HTML-->
   <section id="section4" class="tab-pane">
     <div class="card-header" id="heading-html4">
-      <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html4" aria-expanded="false"
-        aria-controls="collapse-html4" data-hash="#pane-html4" title="HTML Source code tab header">
+      <a
+        class="collapsed"
+        data-bs-toggle="collapse"
+        href="#collapse-html4"
+        aria-expanded="false"
+        aria-controls="collapse-html4"
+        data-hash="#pane-html4"
+        title="HTML Source code tab header">
         Source code
       </a>
     </div>
-    <div id="collapse-html4" class="collapse p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-html4">
+    <div
+      id="collapse-html4"
+      class="collapse p-0 m-0 brd-0"
+      role="tabpanel"
+      aria-labelledby="heading-html4">
       <div class="p-a-sm">
         <pre
           style="max-height: 300px;"><code>{% include "../../src/_includes/modules/executive-profile-transparent.html" %}</code></pre>
@@ -139,24 +192,39 @@ permalink: "components/executive-profile.html"
 <div class="tabs responsive">
   <ul class="nav-tabs">
     <li>
-      <a href="#section5">Example<span class="sr-only"> for transparent executive profile to use on a dark
-          background</span></a>
+      <a href="#section5"
+        >Example<span class="sr-only">
+          for transparent executive profile to use on a dark background</span
+        ></a
+      >
     </li>
     <li>
-      <a href="#section6">Source code<span class="sr-only"> for transparent executive profile to use on a dark
-          background</span></a>
+      <a href="#section6"
+        >Source code<span class="sr-only">
+          for transparent executive profile to use on a dark background</span
+        ></a
+      >
     </li>
   </ul>
 
   <!--Examples-->
   <section id="section5" class="tab-pane">
     <div class="card-header" id="heading-example5">
-      <a data-bs-toggle="collapse" href="#collapse-example5" aria-expanded="true" aria-controls="collapse-example5"
-        data-hash="#pane-example5" title="Example tab header">
+      <a
+        data-bs-toggle="collapse"
+        href="#collapse-example5"
+        aria-expanded="true"
+        aria-controls="collapse-example5"
+        data-hash="#pane-example5"
+        title="Example tab header">
         Example
       </a>
     </div>
-    <div id="collapse-example5" class="collapse show p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-example5">
+    <div
+      id="collapse-example5"
+      class="collapse show p-0 m-0 brd-0"
+      role="tabpanel"
+      aria-labelledby="heading-example5">
       <div class="p-a-sm p-y-0">
         <div class="section-standout">
           {% include "../../src/_includes/modules/executive-profile-dark.html"
@@ -169,12 +237,22 @@ permalink: "components/executive-profile.html"
   <!--HTML-->
   <section id="section6" class="tab-pane">
     <div class="card-header" id="heading-html6">
-      <a class="collapsed" data-bs-toggle="collapse" href="#collapse-html6" aria-expanded="false"
-        aria-controls="collapse-html6" data-hash="#pane-html6" title="HTML Source code tab header">
+      <a
+        class="collapsed"
+        data-bs-toggle="collapse"
+        href="#collapse-html6"
+        aria-expanded="false"
+        aria-controls="collapse-html6"
+        data-hash="#pane-html6"
+        title="HTML Source code tab header">
         Source code
       </a>
     </div>
-    <div id="collapse-html6" class="collapse p-0 m-0 brd-0" role="tabpanel" aria-labelledby="heading-html6">
+    <div
+      id="collapse-html6"
+      class="collapse p-0 m-0 brd-0"
+      role="tabpanel"
+      aria-labelledby="heading-html6">
       <div class="p-a-sm">
         <pre
           style="max-height: 300px;"><code>{% include "../../src/_includes/modules/executive-profile-dark.html" %}</code></pre>
@@ -226,7 +304,9 @@ permalink: "components/executive-profile.html"
   footer.
 </p>
 <figure class="border-1 brd-gray-200">
-  <img src="/images/sample/images/exec-profile1.png" class="img-fluid"
+  <img
+    src="/images/sample/images/exec-profile1.png"
+    class="img-fluid"
     alt="sample page layouts with executive profiles arrangements" />
 </figure>
 
@@ -236,7 +316,9 @@ permalink: "components/executive-profile.html"
   These profiles will vertically stack on smaller devices.
 </p>
 <figure class="border-1 brd-gray-200">
-  <img src="/images/sample/images/exec-profile2.png" class="img-fluid border-1 brd-gray-200"
+  <img
+    src="/images/sample/images/exec-profile2.png"
+    class="img-fluid border-1 brd-gray-200"
     alt="sample page layouts with executive profiles arrangements on dark background" />
 </figure>
 
