updated template updates page

--- a/pages/template-updates.html
+++ b/pages/template-updates.html
@@ -32,6 +32,30 @@ permalink: "template-updates.html"
   </thead>
   <tbody>
     <tr>
+      <td class="text-bold font-size-16">6.1.2</td>
+      <td class="font-size-16">6-6-23</td>
+      <td>
+        <ul class="font-size-16">
+          <li>Updated project with consistent formatting</li>
+          <li>
+            Removed settings section since modern browsers provide those options
+            to the users
+          </li>
+          <li>Removed unused breakpoint (1280px)</li>
+          <li>Updated mobile navigation experience, look and feel</li>
+          <li>Updated mobile side navigation experience, look and feel</li>
+          <li>
+            Cleaned up the JavaScript core code to go inline with JS lint
+            requirements
+          </li>
+          <li>
+            Ca.Gov logo in header and footer is now SVG in CSS (No more image
+            requirements)
+          </li>
+        </ul>
+      </td>
+    </tr>
+    <tr>
       <td class="text-bold font-size-16">6.1.1</td>
       <td class="font-size-16">3-28-23</td>
       <td>
