--- a/pages/cdn.html
+++ b/pages/cdn.html
@@ -35,11 +35,11 @@ permalink: "cdn.html"
 
 <h2>Examples</h2>
 <h3>Using core CSS files</h3>
-<pre><span class="text-accent-p2">&lt;link</span> <span class="text-info">href=</span><span class="text-accent7">"https://california.azureedge.net/cdt/statetemplate/6.1.1/css/cagov.core.css" <span class="text-info">rel=</span><span class="text-accent7">"stylesheet"</span></span><span class="text-accent-p2">&gt;</span>
-<span class="text-accent-p2">&lt;link</span> <span class="text-info">href=</span><span class="text-accent7">"https://california.azureedge.net/cdt/statetemplate/6.1.1/css/colortheme-oceanside.css"</span> <span class="text-info">rel=</span><span class="text-accent7">"stylesheet"</span><span class="text-accent-p2">&gt;</span><br /></pre>
+<pre><span class="text-accent-p2">&lt;link</span> <span class="text-info">href=</span><span class="text-accent7">"https://california.azureedge.net/cdt/statetemplate/6.1.2/css/cagov.core.css" <span class="text-info">rel=</span><span class="text-accent7">"stylesheet"</span></span><span class="text-accent-p2">&gt;</span>
+<span class="text-accent-p2">&lt;link</span> <span class="text-info">href=</span><span class="text-accent7">"https://california.azureedge.net/cdt/statetemplate/6.1.2/css/colortheme-oceanside.css"</span> <span class="text-info">rel=</span><span class="text-accent7">"stylesheet"</span><span class="text-accent-p2">&gt;</span><br /></pre>
 
 <h3>Using JS files</h3>
-<pre><span class="text-accent-p2">&lt;script</span> <span class="text-info">src=</span><span class="text-accent7">"https://california.azureedge.net/cdt/statetemplate/6.1.1/js/cagov.core.js"</span><span class="text-accent-p2">&gt;&lt;/script&gt;</span></pre>
+<pre><span class="text-accent-p2">&lt;script</span> <span class="text-info">src=</span><span class="text-accent7">"https://california.azureedge.net/cdt/statetemplate/6.1.2/js/cagov.core.js"</span><span class="text-accent-p2">&gt;&lt;/script&gt;</span></pre>
 
 <h2>Web page using Web State Template CDN</h2>
 
@@ -55,8 +55,8 @@ permalink: "cdn.html"
      <span class="text-accent-p2">&lt;meta</span> <span class="text-info">name=</span><span class="text-accent7">"viewport"</span> <span class="text-info">content=</span><span class="text-accent7">"width=device-width, initial-scale=1, shrink-to-fit=no"</span><span class="text-accent-p2">&gt;</span>
   
      <span class="text-muted">&lt;!-- State Template CDN CSS --&gt;</span>
-     <span class="text-accent-p2">&lt;link</span> <span class="text-info">rel=</span><span class="text-accent7">"stylesheet"</span> <span class="text-info">href=</span><span class="text-accent7">"https://california.azureedge.net/cdt/statetemplate/6.1.1/css/cagov.core.css"</span><span class="text-accent-p2">&gt;</span>
-     <span class="text-accent-p2">&lt;link</span> <span class="text-info">rel=</span><span class="text-accent7">"stylesheet"</span> <span class="text-info">href=</span><span class="text-accent7">"https://california.azureedge.net/cdt/statetemplate/6.1.1/css/colortheme-oceanside.css"</span><span class="text-accent-p2">&gt;</span>
+     <span class="text-accent-p2">&lt;link</span> <span class="text-info">rel=</span><span class="text-accent7">"stylesheet"</span> <span class="text-info">href=</span><span class="text-accent7">"https://california.azureedge.net/cdt/statetemplate/6.1.2/css/cagov.core.css"</span><span class="text-accent-p2">&gt;</span>
+     <span class="text-accent-p2">&lt;link</span> <span class="text-info">rel=</span><span class="text-accent7">"stylesheet"</span> <span class="text-info">href=</span><span class="text-accent7">"https://california.azureedge.net/cdt/statetemplate/6.1.2/css/colortheme-oceanside.css"</span><span class="text-accent-p2">&gt;</span>
   
     <span class="text-accent-p2">&lt;/head&gt;</span>
    <span class="text-accent-p2">&lt;body&gt;</span>
@@ -83,7 +83,7 @@ permalink: "cdn.html"
      <span class="text-success">&lt;!-- global footer goes here --&gt;</span>
   
      <span class="text-muted">&lt;!-- State Template JavaScript CDN --&gt;</span>
-     <span class="text-accent-p2">&lt;script </span><span class="text-info">src=</span><span class="text-accent7">"https://california.azureedge.net/cdt/statetemplate/6.1.1/js/cagov.core.js"</span><span class="text-accent-p2">&gt;&lt;/script&gt;</span>
+     <span class="text-accent-p2">&lt;script </span><span class="text-info">src=</span><span class="text-accent7">"https://california.azureedge.net/cdt/statetemplate/6.1.2/js/cagov.core.js"</span><span class="text-accent-p2">&gt;&lt;/script&gt;</span>
    <span class="text-accent-p2">&lt;/body&gt;</span>
    <span class="text-accent-p2">&lt;/html&gt;</span>
   </pre>
@@ -98,6 +98,45 @@ permalink: "cdn.html"
 </p>
 <h3>Web State Template v6 (production)</h3>
 <ol data-aria-accordion data-multi data-transition data-default="none">
+  <li>
+    <h4 data-aria-accordion-heading>Version 6.1.2</h4>
+    <div data-aria-accordion-panel>
+      <p>CSS</p>
+      <pre>
+  <code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/6.1.2/css/cagov.core.css
+  https://california.azureedge.net/cdt/statetemplate/6.1.2/css/cagov.core.min.css
+  https://california.azureedge.net/cdt/statetemplate/6.1.2/css/cagov.font-only.css
+  https://california.azureedge.net/cdt/statetemplate/6.1.2/css/cagov.font-only.min.css
+  https://california.azureedge.net/cdt/statetemplate/6.1.2/css/colortheme-delta.css
+  https://california.azureedge.net/cdt/statetemplate/6.1.2/css/colortheme-delta.min.css
+  https://california.azureedge.net/cdt/statetemplate/6.1.2/css/colortheme-eureka.css
+  https://california.azureedge.net/cdt/statetemplate/6.1.2/css/colortheme-eureka.min.css
+  https://california.azureedge.net/cdt/statetemplate/6.1.2/css/colortheme-mono.css
+  https://california.azureedge.net/cdt/statetemplate/6.1.2/css/colortheme-mono.min.css
+  https://california.azureedge.net/cdt/statetemplate/6.1.2/css/colortheme-oceanside.css
+  https://california.azureedge.net/cdt/statetemplate/6.1.2/css/colortheme-oceanside.min.css
+  https://california.azureedge.net/cdt/statetemplate/6.1.2/css/colortheme-orangecounty.css
+  https://california.azureedge.net/cdt/statetemplate/6.1.2/css/colortheme-orangecounty.min.css
+  https://california.azureedge.net/cdt/statetemplate/6.1.2/css/colortheme-pasorobles.css
+  https://california.azureedge.net/cdt/statetemplate/6.1.2/css/colortheme-pasorobles.min.css
+  https://california.azureedge.net/cdt/statetemplate/6.1.2/css/colortheme-sacramento.css
+  https://california.azureedge.net/cdt/statetemplate/6.1.2/css/colortheme-sacramento.min.css
+  https://california.azureedge.net/cdt/statetemplate/6.1.2/css/colortheme-santabarbara.css
+  https://california.azureedge.net/cdt/statetemplate/6.1.2/css/colortheme-santabarbara.min.css
+  https://california.azureedge.net/cdt/statetemplate/6.1.2/css/colortheme-santacruz.css
+  https://california.azureedge.net/cdt/statetemplate/6.1.2/css/colortheme-santacruz.min.css
+  https://california.azureedge.net/cdt/statetemplate/6.1.2/css/colortheme-sierra.css
+  https://california.azureedge.net/cdt/statetemplate/6.1.2/css/colortheme-sierra.min.css
+  https://california.azureedge.net/cdt/statetemplate/6.1.2/css/colortheme-shasta.css
+  https://california.azureedge.net/cdt/statetemplate/6.1.2/css/colortheme-shasta.min.css
+  https://california.azureedge.net/cdt/statetemplate/6.1.2/css/colortheme-trinity.css
+  https://california.azureedge.net/cdt/statetemplate/6.1.2/css/colortheme-trinity.min.css
+  </code></pre>
+      <p>JS</p>
+      <pre><code class="overflow-auto">https://california.azureedge.net/cdt/statetemplate/6.1.2/js/cagov.core.js
+  https://california.azureedge.net/cdt/statetemplate/6.1.2/js/cagov.core.min.js</code></pre>
+    </div>
+  </li>
   <li>
     <h4 data-aria-accordion-heading>Version 6.1.1</h4>
     <div data-aria-accordion-panel>
