css-spacing fix

--- a/pages/sample/css-spacing.html
+++ b/pages/sample/css-spacing.html
@@ -170,14 +170,13 @@ permalink: "get-started/css-classes-shortcuts/spacing.html"
     </p>
 
     <div
-      class="m-y-lg"
-      style="background: #e9ecef; padding: 1rem 6rem 3rem 6rem; text-align: center;">
+      class="m-y-lg bg-gray-200 text-center pt-2 ps-4 pe-4 pb-4 ps-lg-5 pe-lg-5 pb-lg-5">
       <span style="font-family: monospace;">Margin</span>
       <div
-        style="background: #f8f9fa; padding: 1rem 6rem 3rem 6rem; text-align: center;">
+        class="bg-gray-100 text-center pt-2 ps-4 pe-4 pb-4 ps-lg-5 pe-lg-5 pb-lg-5">
         <span style="font-family: monospace;">Padding</span>
         <div
-          style="background: #ffffff; padding: 1rem 6rem 3rem 6rem; text-align: center;">
+          class="bg-white text-center pt-2 ps-4 pe-4 pb-4 ps-lg-5 pe-lg-5 pb-lg-5">
           <span style="font-family: monospace;">Content</span>
         </div>
       </div>
