fix file-input sample expand

--- a/pages/sample/form-elements.html
+++ b/pages/sample/form-elements.html
@@ -589,7 +589,7 @@ permalink: "components/form-elements.html"
     </div>
     <div
       id="collapse-example6"
-      class="collapse sho p-0 m-0 brd-0"
+      class="collapse show p-0 m-0 brd-0"
       role="tabpanel"
       aria-labelledby="heading-example6">
       <div class="p-a-sm p-b">
