--- a/pages/sample/css-gradient-backgrounds.html
+++ b/pages/sample/css-gradient-backgrounds.html
@@ -1,5 +1,5 @@
 ---
-title: Gradient Gackgrounds
+title: Gradient Backgrounds
 landing: Get started
 layout: page.njk
 permalink: "get-started/css-classes-shortcuts/gradient-backgrounds.html"
@@ -42,7 +42,7 @@ permalink: "get-started/css-classes-shortcuts/gradient-backgrounds.html"
     </nav>
   </div>
   <div class="col-lg-9 m-b-lg">
-    <h1 class="mt-lg-0">Gradient Gackgrounds</h1>
+    <h1 class="mt-lg-0">Gradient Backgrounds</h1>
     <nav class="page-navigation"></nav>
 
     <p>
