basic changelog update

--- a/pages/template-updates.html
+++ b/pages/template-updates.html
@@ -32,6 +32,19 @@ permalink: "template-updates.html"
   </thead>
   <tbody>
     <tr>
+      <td class="text-bold font-size-16">6.2</td>
+      <td class="font-size-16">7-14-23</td>
+      <td>
+        <ul class="font-size-16">
+          <li>NPM package support for state template</li>
+          <li>
+            Separating template website development from template source
+            development
+          </li>
+        </ul>
+      </td>
+    </tr>
+    <tr>
       <td class="text-bold font-size-16">6.1.2</td>
       <td class="font-size-16">6-6-23</td>
       <td>
